Changed button text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <span class="quote">&quot;2.1.1&quot;</span>
     </div>
     <div class="controls">
-      <a class="btn" href="latest/api/little/io/index.html">View Scaladoc</a>
+      <a class="btn" href="latest/api/little/io/index.html">API Documentation</a>
       <a class="btn btn-alt" href="https://github.com/losizm/little-io">View on GitHub</a>
     </div>
   </div>
