--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <span class="op">%%</span>
       <span class="quote">&quot;little-io&quot;</span>
       <span class="op">%</span>
-      <span class="quote">&quot;4.2.0&quot;</span>
+      <span class="quote">&quot;5.0.0&quot;</span>
     </div>
     <div class="controls">
-      <a class="btn" href="latest/api/little/io/index.html">API Documentation</a>
+      <a class="btn" href="latest/api/little/io.html">API Documentation</a>
       <a class="btn btn-alt" href="https://github.com/losizm/little-io">View on GitHub</a>
     </div>
   </div>
