--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <title>losizm/little-io @ GitHub Pages</title>
+  <title>losizm/little-io</title>
   <link href="main.css" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +16,7 @@
       <span class="op">%%</span>
       <span class="quote">&quot;little-io&quot;</span>
       <span class="op">%</span>
-      <span class="quote">&quot;6.0.0&quot;</span>
+      <span class="quote">&quot;7.0.0&quot;</span>
     </div>
     <div class="controls">
       <a class="btn" href="latest/api/little/io.html">API Documentation</a>
