--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>little-io</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <title>losizm/little-io</title>
-  <link href="main.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="hero">
-    <div class="brand">little<span class="sep">.</span><em>io</em></div>
-    <div class="tagline">The Scala library that provides extension methods to <em>java.io</em> and <em>java.nio</em>.</div>
-    <div class="stripe">
-      libraryDependencies <span class="op">+=</span>
-      <span class="quote">&quot;com.github.losizm&quot;</span>
-      <span class="op">%%</span>
-      <span class="quote">&quot;little-io&quot;</span>
-      <span class="op">%</span>
-      <span class="quote">&quot;7.0.0&quot;</span>
-    </div>
-    <div class="controls">
-      <a class="btn" href="latest/api/little/io.html">API Documentation</a>
-      <a class="btn btn-alt" href="https://github.com/losizm/little-io">View on GitHub</a>
-    </div>
-  </div>
+  <header>
+    <hgroup>
+      <h1>little-io</h1>
+      <h2>The Scala library that provides extension methods for <em>java.io</em> and <em>java.nio</em></h2>
+    <hgroup>
+  </header>
+  <main>
+    libraryDependencies
+    <span class="op">+=</span>
+    <span class="quote">&quot;com.github.losizm&quot;</span>
+    <span class="op">%%</span>
+    <span class="quote">&quot;little-io&quot;</span>
+    <span class="op">%</span>
+    <span class="quote">&quot;7.0.0&quot;</span>
+  </main>
+  <nav>
+    <a href="latest/api/index.html">API Documentation</a>
+    <a href="https://github.com/losizm/little-io">Source Code</a>
+  </nav>
+  <footer>&copy; 2021 Carlos Conyers. All rights reserved.</footer>
 </body>
 </html>
